name:                swim
version:             1.0.0
synopsis:            Time Series Database Combinators
description:         Swim is a set of command-line tools providing various
                     building blocks for larger custom time series database
                     infrastructures. It implements algorithms that deal
                     with time series compression, correlation of two or
                     more time series, pattern observation, normalization,
                     derivation, and outlier detection.
homepage:            https://github.com/lovasko/swim
license:             BSD2
license-file:        LICENSE
author:              Daniel Lovasko <daniel.lovasko@gmail.com>
maintainer:          Daniel Lovasko <daniel.lovasko@gmail.com>
copyright:           2016 Daniel Lovasko
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable swim
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , cereal
                     , filepath
                     , goat
                     , optparse-applicative
                     , staf
                     , tabl
                     , text
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lovasko/swim
